# Carica

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  testCfg.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-publish.yml  testing.yml
src/: defaultCfgTest.py  testClasses.py  testModule.py
src/carica/: __init__.py  carica.py  exceptions.py  py.typed  typeChecking.py  util.py
src/carica/interface/: ISerializable.py  Serializable.py  __init__.py
src/carica/models/: __init__.py  dataclasses.py  path.py  timedelta.py
src/tests/: caricaTestUtils.py  test_carica.py  test_dataclasses.py  test_path.py  test_timedelta.py
src/tests/testConfigs/loadCfg/loadsCorrectValues/: primativeTypes.toml  serializableTypes.toml
src/tests/testConfigs/loadCfg/rejectsInvalid/: incorrectTypes_primativeTypes.toml  incorrectTypes_serializableTypes.toml
src/tests/testConfigs/loadCfg/respectsTypeOverride/: primativeTypes.toml
src/tests/testConfigs/loadCfg_typeCasting/allowsCastFailKeeping/: primativeTypes.toml
src/tests/testConfigs/loadCfg_typeCasting/loadsCorrectValues/: primativeTypes.toml
src/tests/testConfigs/makeDefaultCfg/hasCorrectContents/: primativeTypes.toml  primativeTypes_Comments_Inline.toml  serializableTypes.toml  serializableTypes_Comments_Inline.toml
src/tests/testModules/partialModuleVariables_Comments_Inline_TruePositive/: singleComment.py
src/tests/testModules/partialModuleVariables_Comments_Preceeding_TruePositive/: multiComment.py  singleComment.py
(+43 files in other folders)
