[metadata]
name = carica
version = 1.0.0
author = Jasper Law
author_email = trimatix.music@gmail.com
description = Python module that populates variables from config documents (e.g TOML), and generates config documents from python variables.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Trimatix/carica
project_urls =
    Bug Tracker = https://github.com/Trimatix/carica/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = 
    = src

[options.extras_require]  # in setup.cfg
test = pytest
